backend/src/main/resources/deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: spring-mongo-service
spec:
  selector:
    app: spring-mongo-service
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 31727
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-mongo-service
spec:
  selector:
      matchLabels:
        app: spring-mongo-service
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-mongo-service
    spec:
      containers:
        - name: spring-mongo-service
          image: pankajdets/springbootkuberimg
          ports:
          - containerPort: 8080
