backend/src/main/resources/mongo-deployment.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongodb-service
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  selector: 
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
      name: mongodb-service

      
    spec:
      containers:
      - image: mongo:latest
        name: mongo
        
        ports:
        - containerPort: 27017
          name: mongo                
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db #This is the path in the container on which the mounting will take place.
      volumes:
      - name: mongo-persistent-storage # Obtaining 'vloume' from PVC
        persistentVolumeClaim:
          claimName: mongo-pv-claim
