backend/src/main/resources/jobportal-ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: jobportal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /?(.*)
          backend:
            serviceName: spring-mongo-service
            servicePort: 80
        - path: /api/?(.*)
          backend:
            serviceName: jobportal-api
            servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jobportal-api
spec:
  selector:
    app: jobportal-api
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
